css/styles.css
/* Google font Poppins */
@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");

body {
  font-family: "Poppins", sans-serif;
  background-color: #1a1a1a;
  color: #f1f3f4;
  margin: 0;
  box-sizing: border-box;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

li {
  margin: 0;
  font-size: medium;
  font-weight: 600;
}

li small {
  font-size: small;
}

a {
  text-decoration: none;
  color: #f1f3f4;
}

.nav-link {
  text-decoration: none;
  color: #f1f3f4;
}

.nav-link:hover {
  text-decoration: underline;
  color: #00a6f9;
}

.nav-link small:hover {
  color: #00a6f9;
}

img {
  width: 4rem;
  border-radius: 4px;
  display: block;
}

small {
  color: lightslategray;
}

button {
  border-radius: 30px;
  cursor: pointer;
  font-weight: 700;
  color: #f1f3f4;
  background-color: #1a1a1a;
  border: #1a1a1a solid 2px;
}

#toggleRepeat {
  border: solid 2px #f1f3f4;
}

pre {
  font-size: small;
  color: #f1f3f4;
}

nav ul {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.hero {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 8px;
}

.hero-template {
  background-size: cover;
  background-color: #3f3f3f;
  background-repeat: no-repeat;
  background-blend-mode: soft-light;
  border-radius: 0px 8px 8px 0px;
  z-index: -10;
}

.hero .chika {
  background-image: url(../chara/chika/hero.jpg);
}

.hero .matsuri {
  background-image: url(../chara/matsuri/hero.jpg);
}

.hero .ana {
  background-image: url(../chara/ana/hero.jpg);
}

.hero .miu {
  background-image: url(../chara/miu/hero.jpg);
}

canvas {
  position: absolute;
  z-index: -5;
}

.home-container {
  text-align: center;
}

.button-container {
  display: flex;
  padding: 1rem 1rem 0.5rem 1rem;
  justify-content: space-between;
  gap: 0.5rem;
}

.lyrics p {
  cursor: pointer;
  font-weight: 600;
  color: #111111;
}

.lyrics p.active {
  color: #f1f3f4;
}

.header {
  text-align: center;
  align-items: center;
}

.lyrics-container {
  border-radius: 8px;
  margin-bottom: 1rem;
}

.lyrics-container.chika {
  background-color: #d51515;
}

.lyrics-container.ana {
  background-color: #009146;
}

.lyrics-container.matsuri {
  background-color: #1555d5;
}

.lyrics-container.miu {
  background-color: #9b15d5;
}

#overflow {
  height: 50vh;
  overflow-y: scroll;
  overflow-x: hidden;
  scroll-behavior: smooth;
  text-align: left;
  padding: 0 1rem 1rem 1rem;
  border-radius: 8px;
}

.media {
  display: flex;
  justify-content: center;
  margin: 0 0 1rem 0;
}

.footer {
  padding: 1rem 0 1rem 0;
  text-align: center;
  margin-bottom: 1rem;
}

.footer small {
  display: block;
}

.footer :nth-child(2) {
  margin-top: 1rem;
}

.wrap {
  padding: 0.5rem;
  border-radius: 8px;
  text-align: left;
  box-sizing: border-box;
}

/* Media query */
@media screen and (max-width: 380px) {
  .hero-template {
    display: none;
  }

  .hero {
    display: block;
    text-align: center;
    background-size: cover;
    background-image: url(/assets/cover.jpg);
    background-repeat: no-repeat;
    background-blend-mode: multiply;
    background-color: #303030;
    margin-bottom: 1rem;
    box-shadow: inset #1a1a1a 0 -4rem 4rem;
    padding: 1rem;
  }

  .button-container {
    padding: 1rem 0.5rem 0.5rem 0.5rem;
  }

  canvas {
    display: none;
  }
}

@media screen and (min-width: 320px) {
  .grid {
    margin: 0 0.5rem 0 0.5rem;
    padding: 0 0.5rem 0 0.5rem;
  }

  .lyrics p {
    font-size: larger;
  }

  .card {
    display: flex;
    gap: 1rem;
    align-items: center;
    margin-bottom: 1rem;
    border-radius: 8px;
    border: lightslategray solid 1px;
    background-color: #101010;
    padding: 0 1rem 0 1rem;
    flex-shrink: 0;
  }

  .card:hover {
    border: #f1f3f4 solid 1px;
    background-color: black;
    transition: 200ms;
  }

  .card.active {
    border: #f1f3f4 2px solid;
    background-color: black;
  }

  .row {
    display: flex;
    overflow-x: auto;
    gap: 1rem;
    height: 8rem;
  }

  .home-grid {
    display: block;
    padding: 0 1rem 0 1rem;
  }

  .home-grid .card {
    padding: 1rem;
  }

  audio {
    width: 100%;
    /* #1b1b1b */
    filter: sepia(100%) saturate(100%) grayscale(1) contrast(100%) invert(90%);
  }

  button {
    padding: 0.4rem 0.6rem;
    font-weight: 700;
  }

  .button-left {
    display: flex;
    gap: 0.5rem;
  }

  .hero-template {
    background-position: right -0.5rem bottom 0;
    padding: 6rem 10rem 6rem 2rem;
    box-shadow: inset #1a1a1a 4rem 0 3rem;
    margin-bottom: 1rem;
  }

  canvas {
    top: 25vh;
  }

  ::-webkit-scrollbar {
    width: 5px;
    height: 5px;
  }
}

@media screen and (min-width: 465px) {
  .hero-template {
    padding: 6rem 15rem 6rem 2rem;
  }
}

@media screen and (min-width: 620px) {
  .grid {
    margin: 0 4rem 0 4rem;
  }

  .home-grid {
    padding: 0 10rem 0 10rem;
  }

  .lyrics p {
    font-size: x-large;
  }

  .lyrics p:hover {
    color: #f1f3f4;
  }

  audio {
    width: 60%;
  }

  .hero-template {
    background-position: right -1rem bottom -1rem;
    padding: 6rem 18rem 6rem 2rem;
    margin-bottom: 1rem;
  }
}

@media screen and (min-width: 1220px) {
  .grid {
    margin: 0 20rem 0 20rem;
  }

  .scroll-button {
    display: initial;
  }

  .home-grid {
    padding: 0 30rem 0 30rem;
  }

  .button-container {
    display: flex;
    justify-content: space-between;
  }

  button {
    padding: 0.5rem 0.7rem;
  }

  .hero-template {
    background-position: right -1.5rem bottom -3.5rem;
    padding: 6rem 15rem 6rem 10rem;
  }

  canvas {
    top: 22.5vh;
  }

  ::-webkit-scrollbar {
    width: 8px;
    height: 8px;
  }
}

::-webkit-scrollbar-track {
  background: #f4f1f100;
  border-radius: 8px;
}

::-webkit-scrollbar-thumb {
  background: #f1f3f4;
  border-radius: 8px;
}

::-webkit-scrollbar-thumb:hover {
  background: lightslategray;
}

